cmss/main/default/objects/LifeInsuranceFonds__c/LifeInsuranceFonds__c.object-meta.xml
<CustomObject>
    <label>Life Insurance Fonds</label>
    <nameField>
        <label>LifeInsuranceFonds Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Life Insurance Fonds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>