cmss/main/default/objects/LifeInsuranceFonds__c/fields/AllocationProcent__c.field-meta.xml
<CustomField>
    <fullName>AllocationProcent__c</fullName>
    <label>Allocation Procent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>