cmss/main/default/objects/LifeInsuranceFonds__c/fields/AssignmentDateBeginning__c.field-meta.xml
<CustomField>
    <fullName>AssignmentDateBeginning__c</fullName>
    <label>Assignment Date Beginning</label>
    <type>Date</type>
</CustomField>