cmss/main/default/objects/LifeInsuranceFonds__c/fields/AssignmentDateEnd__c.field-meta.xml
<CustomField>
    <fullName>AssignmentDateEnd__c</fullName>
    <label>Assignment Date End</label>
    <type>Date</type>
</CustomField>