cmss/main/default/objects/LifeInsuranceFonds__c/fields/Fond__c.field-meta.xml
<CustomField>
    <fullName>Fond__c</fullName>
    <label>Fond</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>