cmss/main/default/objects/LifeInsuranceFonds__c/fields/ValueFond__c.field-meta.xml
<CustomField>
    <fullName>ValueFond__c</fullName>
    <label>Value Fond</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>